Added small image at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -15,4 +15,16 @@
       </ul>
     </article>
   </body>
+  <footer>
+    <h2>
+    <figure class="photo">
+      <img src="project3/media/image/starWarsLogo.png" alt="Star Wars logo." />
+      <figcaption>
+        <p>
+          All rights reserved. CE + JM 2016.
+        </p>
+      </figcaption>
+    </figure>
+    </h2>
+  </footer>
   </html>
