Added h1 and h2 tags for more control

--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/swapi.js"></script>
     <article>
-      <p> Random Star Wars character bio</p>
+      <h1>Random Star Wars character Bio</h1>
       <button id="random">GET A RANDOM BIO</button>
       <ul id="character">
       </ul>
     </article>
   </body>
   <footer>
-    <h2>
     <figure class="photo">
-      <img src="project3/media/image/starWarsLogo.png" alt="Star Wars logo." />
+      <img src="media/images/starWarsLogo.png" alt="Star Wars logo." />
       <figcaption>
-        <p>
-          All rights reserved. CE + JM 2016.
-        </p>
+        <h2>
+          All rights reserved. CE & JM 2016.
+        </h2>
       </figcaption>
     </figure>
-    </h2>
   </footer>
   </html>
