Removed the images folder out of the media folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </body>
   <footer>
     <figure class="photo">
-      <img src="media/images/starWarsLogo.png" alt="Star Wars logo." />
+      <img src="/images/starWarsLogo.png" alt="Star Wars logo." />
       <figcaption>
         <h2>
           All rights reserved. CE & JM 2016.
