--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/swapi.js"></script>
     <article>
-      <h1>Random Star Wars character Bio</h1>
+      <h1>Random Star Wars Character Bio</h1>
       <button id="random">GET A RANDOM BIO</button>
       <ul id="character">
       </ul>
