Added padding to some h1 and h2 tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" media="screen" href="css/screen.css" /></head>
   <body>
+    <figure class="photo">
+      <img src="/images/starWarsLogo.png" alt="Star Wars logo." />
+    </figure>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/swapi.js"></script>
     <article>
@@ -16,13 +19,8 @@
     </article>
   </body>
   <footer>
-    <figure class="photo">
-      <img src="/images/starWarsLogo.png" alt="Star Wars logo." />
-      <figcaption>
-        <h2>
-          All rights reserved. CE & JM 2016.
-        </h2>
-      </figcaption>
-    </figure>
+    <h2>
+      All rights reserved. CE &amp; JM 2016.
+    </h2>
   </footer>
   </html>
