Fixed HTML so that it would successfully validate

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
-<head>
-  <title>Star Wars Character Bios</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel="stylesheet" media="screen" href="css/screen.css" /></head>
-  <body>
-    <figure class="photo">
-      <img src="/images/starWarsLogo.png" alt="Star Wars logo." />
-    </figure>
+  <head>
+    <title>Star Wars Character Bios</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <link rel="stylesheet" media="screen" href="css/screen.css" /></head>
+    <body>
+      <figure class="photo">
+        <img src="/images/starWarsLogo.png" alt="Star Wars logo." />
+      </figure>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/swapi.js"></script>
-    <article>
-      <p> Star Wars Character Bios</p>
+    <section>
+      <h2> Star Wars Character Bios</h2>
       <form id="swapi-form" name="swapi-form" method="get" action="#null">
         <label for="chars">Enter a character's name.</label>
         <input type="text" id="chars" name="chars" />
@@ -21,11 +21,11 @@
       <button id="random">Get a random bio</button>
       <ul id="bio">
       </ul>
-    </article>
+    </section>
+    <footer>
+      <h2>
+        All rights reserved. CE &amp; JM 2016.
+      </h2>
+    </footer>
   </body>
-  <footer>
-    <h2>
-      All rights reserved. CE &amp; JM 2016.
-    </h2>
-  </footer>
   </html>
